[API] Document FT_MY_ACCOUNT

--- a/api/sample.env
+++ b/api/sample.env
@@ -267,3 +267,10 @@ LOG_ENABLED=true
 # type: String
 # default: none
 AUTH_SECRET=Change me!
+
+# Allow email change in API
+
+# presence: optional
+# type: String
+# default: false
+FT_MY_ACCOUNT=false
