--- a/mon-pix/package.json
+++ b/mon-pix/package.json
@@ -99,6 +99,7 @@
     "ember-sinon": "^5.0.0",
     "ember-source": "^3.23.1",
     "ember-template-lint": "^2.15.0",
+    "ember-test-selectors": "^5.0.0",
     "ember-truth-helpers": "^3.0.0",
     "eslint": "^7.15.0",
     "eslint-plugin-ember": "^10.0.2",
