Ignore broken link to martinfowler.com on lint

--- a/docs/link--check-config.json
+++ b/docs/link--check-config.json
@@ -2,6 +2,9 @@
   "ignorePatterns": [
     {
       "pattern": "^https://github.com/1024pix/pix-editor/pull/"
+    },
+    {
+      "pattern": "^https://martinfowler.com/"
     }
   ]
 }
