[API] Remove dead code about mailjet

--- a/api/sample.env
+++ b/api/sample.env
@@ -66,64 +66,12 @@ TEST_DATABASE_URL=postgresql://postgres@localhost/pix_test
 # MAILING_ENABLED=true
 
 # Select the emailing service provider. Availaible providers supported  are
-# Sendinblue (value="sendinblue") or MailJet (value="mailjet").
+# Sendinblue (value="sendinblue").
 #
 # presence: required only if emailing is enabled
 # type: String
-# default: "mailjet"
+# default: "sendinblue"
 # MAILING_PROVIDER=sendinblue
-
-# MailJet
-# -------
-
-# "Key" part of the credentials required to call the MailJet API.
-#
-# presence: required if emailing is enabled and provider is MailJet
-# type: String
-# default: none
-# MAILJET_API_KEY=
-
-# "Secret" part of the credentials required to call the MailJet API.
-#
-# If not present when required, the e-mail will not be sent errors will be
-# thrown.
-#
-# presence: required only if emailing is enabled and provider is MailJet
-# type: String
-# default: none
-# MAILJET_API_SECRET=
-
-# ID of the template used for generating the e-mail when an account is created.
-#
-# If not present when required, the e-mail will not be sent and an error will
-# be thrown.
-#
-# presence: required only if emailing is enabled and provider is MailJet
-# type: Number
-# default: none
-# MAILJET_ACCOUNT_CREATION_TEMPLATE_ID=
-
-# ID of the template used for generating the e-mail when a user is invited to
-# join an organization.
-#
-# If not present when required, the e-mail will not be sent and an error will
-# be thrown.
-#
-# presence: required only if emailing is enabled and provider is MailJet
-# type: Number
-# default: none
-# MAILJET_ORGANIZATION_INVITATION_TEMPLATE_ID=
-
-# ID of the template used for generating the e-mail when a user want to
-# generate a new password.
-#
-# If not present when required, the e-mail will not be sent and an error will
-# be thrown.
-#
-# presence: required only if emailing is enabled and provider is MailJet
-# type: Number
-# default: none
-# MAILJET_PASSWORD_RESET_TEMPLATE_ID=
 
 # Sendinblue
 # ----------
