--- a/package.json
+++ b/package.json
@@ -81,15 +81,15 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bluebird": "3.7.2",
-    "d3-dsv": "1.2.0",
+    "d3-dsv": "^2.0.0",
     "markdown-link-check": "^3.8.6",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
+    "chai": "^4.3.0",
     "eslint": "^7.20.0",
     "eslint-plugin-mocha": "^8.0.0",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.3"
   }
 }
