--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
     "good": "^8.1.2",
     "good-console": "^8.0.0",
     "good-squeeze": "^5.1.0",
+    "hapi-i18n": "^3.0.0",
     "hapi-sentry": "^3.1.0",
     "hapi-swagger": "^14.1.0",
     "hash-int": "^1.0.0",
