--- a/api/package.json
+++ b/api/package.json
@@ -75,7 +75,7 @@
     "xlsx": "^0.16.1",
     "xml-buffer-tostring": "^0.2.0",
     "xml2js": "^0.4.23",
-    "xmldom": "0.3.0",
+    "xmldom": "^0.4.0",
     "xregexp": "^4.3.0",
     "yamljs": "^0.3.0",
     "yargs": "^15.4.1"
