--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,6 +217,9 @@ jobs:
           paths:
             - ~/.npm
       - run:
+          name: Lint
+          command: npm run lint
+      - run:
           name: Test
           command: npm test
 
