[API] Notify user of email change

--- a/api/sample.env
+++ b/api/sample.env
@@ -126,6 +126,16 @@ TEST_DATABASE_URL=postgresql://postgres@localhost/pix_test
 # default: none
 # SENDINBLUE_PASSWORD_RESET_TEMPLATE_ID=
 
+# ID of the template used to notify the user its email has been changed
+#
+# If not present when required, the e-mail will not be sent and an error will
+# be thrown.
+#
+# presence: required only if emailing is enabled and provider is Sendinblue
+# type: Number
+# default: none
+# SENDINBLUE_EMAIL_CHANGE_TEMPLATE_ID=
+
 # String for links in emails redirect to a specific domain when user comes from french domain
 #
 # presence: optional
