Igonre Pole emploi link in doc link checker

--- a/docs/link--check-config.json
+++ b/docs/link--check-config.json
@@ -5,6 +5,9 @@
     },
     {
       "pattern": "^https://martinfowler.com/"
+    },
+    {
+      "pattern": "^https://peconnect.pole-emploi.fr/"
     }
   ]
 }
