--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "axios": "^0.21.1",
     "bluebird": "3.7.2",
     "d3-dsv": "^2.0.0",
-    "markdown-link-check": "^3.8.6",
     "moment": "^2.29.1",
     "npm-run-all": "^4.1.5"
   },
@@ -91,5 +90,8 @@
     "eslint": "^7.20.0",
     "eslint-plugin-mocha": "^8.0.0",
     "mocha": "^8.3.0"
+  },
+  "peerDependencies": {
+    "markdown-link-check": "^3.8.6"
   }
 }
