--- a/api/package.json
+++ b/api/package.json
@@ -87,6 +87,7 @@
     "eslint": "^7.21.0",
     "eslint-plugin-mocha": "^8.0.0",
     "mocha": "^8.3.0",
+    "mocha-junit-reporter": "^2.0.0",
     "nock": "^13.0.10",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
