--- a/mon-pix/package.json
+++ b/mon-pix/package.json
@@ -28,12 +28,14 @@
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "lint:scss": "stylelint app/styles/*.scss 'app/styles/**/*.scss'",
-    "build": "ember build --environment $BUILD_ENVIRONMENT",
     "preinstall": "npx check-engine",
     "start": "ember serve --proxy http://localhost:3000",
     "test": "ember test --reporter dot",
     "test:lint": "npm test && npm run lint",
-    "test:watch": "ember exam --serve --reporter dot"
+    "test:watch": "ember exam --serve --reporter dot",
+    "build:modern": "MODERN_SCRIPT=true ember build --environment $BUILD_ENVIRONMENT --output-path=dist-modern",
+    "build": "ember build --environment $BUILD_ENVIRONMENT && npm run build:modern && npm run copy-modern",
+    "copy-modern": "node copy-modern.js"
   },
   "devDependencies": {
     "@ember/jquery": "^1.1.0",
@@ -107,11 +109,13 @@
     "eslint-plugin-node": "^11.1.0",
     "faker": "^5.1.0",
     "js-yaml": "^3.14.1",
+    "jsdom": "^16.5.1",
     "jwt-decode": "^3.1.2",
     "loader.js": "^4.7.0",
     "lodash": "^4.17.20",
     "p-queue": "^6.6.2",
     "pix-ui": "git://github.com/1024pix/pix-ui.git#v2.1.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.30.0",
     "showdown": "^1.9.1",
     "stylelint": "^13.8.0",
