--- a/mon-pix/package.json
+++ b/mon-pix/package.json
@@ -116,5 +116,6 @@
     "showdown": "^1.9.1",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0"
-  }
+  },
+  "dependencies": {}
 }
