[VSCODE] add auto fix eslint on saving

--- a/.vscode/sample.settings.json
+++ b/.vscode/sample.settings.json
@@ -1,4 +1,7 @@
 {
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
     "eslint.format.enable": true,
     "eslint.workingDirectories": [
         "./admin",
