--- a/admin/package.json
+++ b/admin/package.json
@@ -33,19 +33,20 @@
   "devDependencies": {
     "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^2.0.0",
+    "@ember/test-helpers": "^2.1.4",
     "@fortawesome/ember-fontawesome": "^0.2.2",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@glimmer/component": "^1.0.2",
+    "@glimmer/component": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.5.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^5.0.0",
     "ember-api-actions": "^0.2.9",
-    "ember-auto-import": "^1.8.0",
+    "ember-auto-import": "^1.10.1",
     "ember-bootstrap": "^4.3.0",
-    "ember-cli": "~3.23.0",
+    "ember-cli": "~3.24.0",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.23.0",
     "ember-cli-dependency-checker": "^3.2.0",
@@ -63,7 +64,7 @@
     "ember-composable-helpers": "^4.3.0",
     "ember-concurrency": "^1.3.0",
     "ember-cp-validations": "^4.0.0-beta.10",
-    "ember-data": "~3.23.0",
+    "ember-data": "~3.24.0",
     "ember-decorators": "^6.1.1",
     "ember-exam": "^6.0.0",
     "ember-export-application-global": "^2.0.1",
@@ -76,11 +77,11 @@
     "ember-moment": "^8.0.0",
     "ember-native-dom-helpers": "^0.6.3",
     "ember-power-select": "^4.0.5",
-    "ember-qunit": "^4.6.0",
+    "ember-qunit": "^5.1.1",
     "ember-resolver": "^8.0.2",
     "ember-simple-auth": "^3.0.1",
     "ember-sinon": "^5.0.0",
-    "ember-source": "~3.23.1",
+    "ember-source": "~3.24.0",
     "ember-test-selectors": "^5.0.0",
     "ember-toggle": "^7.0.0",
     "ember-truth-helpers": "^3.0.0",
@@ -98,6 +99,7 @@
     "pix-ui": "git://github.com/1024pix/pix-ui.git#v2.1.0",
     "popper.js": "^1.16.1",
     "query-string": "^6.13.6",
+    "qunit": "^2.13.0",
     "qunit-dom": "^1.6.0",
     "sass": "^1.27.0"
   },
