--- a/certif/package.json
+++ b/certif/package.json
@@ -71,7 +71,7 @@
     "ember-inputmask": "^0.11.0",
     "ember-keyboard": "^6.0.1",
     "ember-load-initializers": "^2.1.2",
-    "ember-modal-dialog": "^3.0.0-beta.4",
+    "ember-modal-dialog": "^3.0.2",
     "ember-moment": "^8.0.0",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.2",
