[API] Wrap lint execution in npm task

--- a/api/package.json
+++ b/api/package.json
@@ -111,7 +111,9 @@
     "db:prepare": "npm run db:delete && npm run db:create && npm run db:migrate",
     "db:seed": "knex --knexfile db/knexfile.js seed:run",
     "db:reset": "npm run db:prepare && npm run db:seed",
-    "lint": "eslint .",
+    "lint": "npm run lint:file-and-directory-names && npm run lint:code",
+    "lint:file-and-directory-names": "ls-lint",
+    "lint:code": "eslint .",
     "lint:fix": "eslint --fix .",
     "lint:json": "eslint --fix --ext .json translations/",
     "postdeploy": "npm run db:migrate",
