--- a/orga/package.json
+++ b/orga/package.json
@@ -28,6 +28,7 @@
     "lint:ci": "npm run lint",
     "lint:js": "eslint .",
     "lint:hbs": "ember-template-lint .",
+    "lint:json": "eslint --fix --ext .json translations/fr.json",
     "preinstall": "npx check-engine",
     "start": "ember serve --proxy http://localhost:3000",
     "test": "ember test --reporter dot",
@@ -82,6 +83,7 @@
     "ember-truth-helpers": "^3.0.0",
     "eslint": "^7.15.0",
     "eslint-plugin-ember": "^10.0.2",
+    "eslint-plugin-i18n-json": "^3.1.0",
     "eslint-plugin-mocha": "^8.1.0",
     "faker": "^5.5.2",
     "loader.js": "^4.7.0",
