--- a/api/package.json
+++ b/api/package.json
@@ -112,6 +112,7 @@
     "db:reset": "npm run db:prepare && npm run db:seed",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "lint:json": "eslint --fix --ext .json translations/",
     "postdeploy": "npm run db:migrate",
     "preinstall": "npx check-engine",
     "scalingo-background-job": "node scripts/reload-cache-everyday.js",
