Add a command to run all linter for translations

--- a/package.json
+++ b/package.json
@@ -57,10 +57,14 @@
     "lint": "run-p --print-label lint:api lint:mon-pix lint:orga lint:certif lint:admin",
     "lint:admin": "cd admin && npm run lint",
     "lint:api": "cd api && npm run lint",
+    "lint:api:json": "cd api && npm run lint:json",
     "lint:certif": "cd certif && npm run lint",
     "lint:mon-pix": "cd mon-pix && npm run lint",
+    "lint:mon-pix:json": "cd mon-pix && npm run lint:json",
     "lint:orga": "cd orga && npm run lint",
+    "lint:orga:json": "cd orga && npm run lint:json",
     "lint:scripts": "cd scripts && eslint .",
+    "lint:json": "run-p --print-label lint:api:json lint:mon-pix:json lint:orga:json",
     "lint:docs": "find ./docs -type f -name '*.md' | xargs -L1 markdown-link-check --quiet --config ./docs/link--check-config.json ",
     "preinstall": "npx check-engine",
     "start": "run-p --print-label start:api start:mon-pix start:orga start:certif start:admin",
