[API] Add SAML env variable in sample.env

--- a/api/sample.env
+++ b/api/sample.env
@@ -226,5 +226,27 @@ LOG_ENABLED=true
 # default: none
 AUTH_SECRET=Change me!
 
+# SAML authentication - Identity provider (encrypted)
+#
+# If not provided, the SAML authentication will fail.
+#
+# presence: required
+# type: String
+# default: none
+# sample:{"metadata":"<EntityDescriptor xmlns=\"urn:oasis:names:tc:SAML:2.0:metadata (...)
+SAML_IDP_CONFIG=
+
+
+# SAML authentication - Service provider (encrypted)
+#
+# If not provided, the SAML authentication will fail.
+#
+# presence: required
+# type: String
+# default: none
+# sample: {"metadata":"<EntityDescriptor xmlns=\"urn:oasis:names:tc:SAML:2.0:metada (...)
+SAML_SP_CONFIG=
+
+
 # Allow email change in API
 
