[API] Add link to provide local SAML environment

--- a/api/sample.env
+++ b/api/sample.env
@@ -227,6 +227,7 @@ LOG_ENABLED=true
 AUTH_SECRET=Change me!
 
 # SAML authentication - Identity provider (encrypted)
+# If you need a local IDP, refer to https://github.com/1024pix/pix-saml-idp/blob/master/README.md
 #
 # If not provided, the SAML authentication will fail.
 #
@@ -238,6 +239,7 @@ SAML_IDP_CONFIG=
 
 
 # SAML authentication - Service provider (encrypted)
+# If you need a local IDP, refer to https://github.com/1024pix/pix-saml-idp/blob/master/README.md
 #
 # If not provided, the SAML authentication will fail.
 #
