[API] Make SAML configuration explicitly optional

--- a/api/sample.env
+++ b/api/sample.env
@@ -235,7 +235,7 @@ AUTH_SECRET=Change me!
 # type: String
 # default: none
 # sample:{"metadata":"<EntityDescriptor xmlns=\"urn:oasis:names:tc:SAML:2.0:metadata (...)
-SAML_IDP_CONFIG=
+# SAML_IDP_CONFIG=
 
 
 # SAML authentication - Service provider (encrypted)
@@ -247,7 +247,7 @@ SAML_IDP_CONFIG=
 # type: String
 # default: none
 # sample: {"metadata":"<EntityDescriptor xmlns=\"urn:oasis:names:tc:SAML:2.0:metada (...)
-SAML_SP_CONFIG=
+# SAML_SP_CONFIG=
 
 
 # Allow email change in API
